[workspace]
resolver = "2"
members = [
    "themachine",
    "rs-primitives",
    "rs-service",
    "rs-hack",
    "rs-onchain",
    "rs-offchain", 
    "rs-dispatcher",
    "rs-psql",
    "rs-strategy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = "z"

[workspace.dependencies]
actix-web = "4.9.0"
colored = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.19"
solagent = "0.1.9"
postgres = "0.19.9"